# decrypt

./: .gitignore  CMakeLists.txt  README.md
R/: animate.R  decrypt.R  visualize_demography.R
cpp/: CMakeLists.txt  spatial_simulator.h
cpp/src/: CMakeLists.txt
cpp/test/: default_config.ctl
decrypt_core/: CMakeLists.txt  main.cpp  model_1.cpp  model_1.h  model_2.cpp  model_2.h  model_3_data.h  model_4_data.cpp  model_4_data.h  qegg1.h  utils.h
decrypt_core/include/coalescence/occupancy_spectrum/: OccupancySpectrumDistribution.h  in_memoized_distribution.h  spectrum_creation_policy.h
decrypt_core/include/demography/: strategy.h
decrypt_core/include/geography/: EnvironmentalQuantity.h
decrypt_core/include/simulator/: simulator.h
example/: australia_precipitation_6032.tif  bpp.ctl  config_2.ctl  last_N.tif  spatial_process.ctl
examples/: config_1.ctl  config_3.ctl  data_extract.txt  spatial_process.ctl
python/: CMakeLists.txt  decrypt.py  decrypt_lib.py  genospatial.py  genospatial_lib.py  mytest.py  reality_check.py
